tests/any_propagation/any_propagation.exp
Error --------------------------------------------------------------------------------------------------- arrays.js:8:14

Cannot call `noop` with `new_arr` bound to `arr` because null or undefined [1] is incompatible with string [2] in array
element of array element. [incompatible-call]

   arrays.js:8:14
   8| noop<string>(new_arr);
                   ^^^^^^^

References:
   arrays.js:4:31
   4| declare var arr : Array<Array<?string>>;
                                    ^^^^^^^ [1]
   arrays.js:8:6
   8| noop<string>(new_arr);
           ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ function.js:10:10

Cannot assign `42` to `o[x]` because number [1] is incompatible with string [2]. [incompatible-type]

   function.js:10:10
   10|   o[x] = 42;
                ^^ [1]

References:
   function.js:2:27
    2| declare var o: {[string]: string};
                                 ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ function.js:16:10

Cannot assign `42` to `o[x]` because number [1] is incompatible with string [2]. [incompatible-type]

   function.js:16:10
   16|   o[x] = 42;
                ^^ [1]

References:
   function.js:2:27
    2| declare var o: {[string]: string};
                                 ^^^^^^ [2]



Found 3 errors
